--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -13,6 +13,24 @@
       site: {{site_json}}
     };
   </script>
+  <script>
+    (function () {
+      try {
+        const id = window.__VODCASTS__?.site?.analytics?.measurementId || "";
+        if (!id) return;
+        const s = document.createElement("script");
+        s.async = true;
+        s.src = "https://www.googletagmanager.com/gtag/js?id=" + encodeURIComponent(id);
+        document.head.appendChild(s);
+
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { window.dataLayer.push(arguments); }
+        window.gtag = window.gtag || gtag;
+        gtag("js", new Date());
+        gtag("config", id, { send_page_view: false });
+      } catch {}
+    })();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
 </head>
 <body>
