--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -7,9 +7,7 @@
   <meta name="theme-color" content="#0b0c10" />
   <link rel="stylesheet" href="{{base_path}}assets/style.css">
   <link rel="stylesheet" href="{{base_path}}assets/themes.css">
-  <link rel="manifest" href="{{base_path}}manifest.webmanifest" />
-  <link rel="icon" href="{{base_path}}assets/icon-192.png" />
-  <link rel="apple-touch-icon" href="{{base_path}}assets/apple-touch-icon.png" />
+  {{favicon_head_html}}
   <script>
     window.__VODCASTS__ = {
       basePath: {{base_path_json}},
